service-covid19-tracker/service-covid19-tracker-deployment/k8s/backend-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bhavik-covid19-backend-deployment
  labels:
    app: bhavik-covid19-backend
    type: backend
spec:
  template:
    metadata:
      name: bhavik-covid19-backend-pod
      labels:
        app: bhavik-covid19-backend
        type: backend
    spec:
      containers:
        - name: covid19-backend
          image: bhavik3jain/bhavik-services-covid19-backend:1.7
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8083
  replicas: 4
  selector:
    matchLabels:
      type: backend
---
apiVersion: v1
kind: Service
metadata:
  name: bhavik-covid19-backend-service
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      targetPort: 8083
      port: 8083
  selector:
    app: bhavik-covid19-backend
    type: backend
---
##### gcloud compute addresses create bhavik-covid19-backend --global 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bhavik-covid19-backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "bhavik-covid19-backend"
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: bhavik-covid19-backend-service
            servicePort: 8083
        - path: /data/*
          backend:
            serviceName: bhavik-covid19-backend-service
            servicePort: 8083
        - path: /states
          backend:
            serviceName: bhavik-covid19-backend-service
            servicePort: 8083
        - path: /analytics/*
          backend:
            serviceName: bhavik-covid19-backend-service
            servicePort: 8083
